ember-bdi/tests/macros/compile-fail/percept_custom_expr_missing_into_literal.rs
extern crate alloc;
use ember::agent::bdi::literal::IntoLiteral;
use ember::agent::bdi::sensor::Percept;

struct NotLiteral;

#[derive(IntoLiteral, Percept)]
#[ember(add(NotLiteral))]
struct Bad;

fn main() {}
